server/Syntax Analyzer/syntaxChecker.output
Terminals unused in grammar

   ELLIPSIS


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | INC_OP unary_expression
   17                 | DEC_OP unary_expression
   18                 | unary_operator cast_expression
   19                 | SIZEOF unary_expression
   20                 | SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression
   28                | '(' type_name ')' cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression '*' cast_expression
   31                          | multiplicative_expression '/' cast_expression
   32                          | multiplicative_expression '%' cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression '+' multiplicative_expression
   35                    | additive_expression '-' multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_OP additive_expression
   38                 | shift_expression RIGHT_OP additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression '<' shift_expression
   41                      | relational_expression '>' shift_expression
   42                      | relational_expression LE_OP shift_expression
   43                      | relational_expression GE_OP shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OP relational_expression
   46                    | equality_expression NE_OP relational_expression

   47 and_expression: equality_expression
   48               | and_expression '&' equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression '^' and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression '|' exclusive_or_expression

   53 logical_and_expression: inclusive_or_expression
   54                       | logical_and_expression AND_OP inclusive_or_expression

   55 logical_or_expression: logical_and_expression
   56                      | logical_or_expression OR_OP logical_and_expression

   57 conditional_expression: logical_or_expression
   58                       | logical_or_expression '?' expression ':' conditional_expression

   59 assignment_expression: conditional_expression
   60                      | unary_expression assignment_operator assignment_expression

   61 assignment_operator: '='
   62                    | MUL_ASSIGN
   63                    | DIV_ASSIGN
   64                    | MOD_ASSIGN
   65                    | ADD_ASSIGN
   66                    | SUB_ASSIGN
   67                    | LEFT_ASSIGN
   68                    | RIGHT_ASSIGN
   69                    | AND_ASSIGN
   70                    | XOR_ASSIGN
   71                    | OR_ASSIGN

   72 expression: assignment_expression
   73           | expression ',' assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'

   77 declaration_no_semi: declaration_specifiers init_declarator_list

   78 declaration_specifiers: storage_class_specifier
   79                       | storage_class_specifier declaration_specifiers
   80                       | type_specifier
   81                       | type_specifier declaration_specifiers
   82                       | type_qualifier
   83                       | type_qualifier declaration_specifiers

   84 init_declarator_list: init_declarator
   85                     | init_declarator_list ',' init_declarator

   86 init_declarator: declarator
   87                | declarator '=' initializer

   88 storage_class_specifier: TYPEDEF
   89                        | EXTERN
   90                        | STATIC
   91                        | AUTO
   92                        | REGISTER

   93 type_specifier: VOID
   94               | CHAR
   95               | SHORT
   96               | INT
   97               | LONG
   98               | FLOAT
   99               | DOUBLE
  100               | SIGNED
  101               | UNSIGNED
  102               | struct_or_union_specifier
  103               | enum_specifier
  104               | TYPE_NAME

  105 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  106                          | struct_or_union '{' struct_declaration_list '}'
  107                          | struct_or_union IDENTIFIER

  108 struct_or_union: STRUCT
  109                | UNION

  110 struct_declaration_list: struct_declaration
  111                        | struct_declaration_list struct_declaration

  112 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list
  114                         | type_specifier
  115                         | type_qualifier specifier_qualifier_list
  116                         | type_qualifier

  117 struct_declarator_list: struct_declarator
  118                       | struct_declarator_list ',' struct_declarator

  119 struct_declarator: declarator
  120                  | ':' constant_expression
  121                  | declarator ':' constant_expression

  122 enum_specifier: ENUM '{' enumerator_list '}'
  123               | ENUM IDENTIFIER '{' enumerator_list '}'
  124               | ENUM IDENTIFIER

  125 enumerator_list: enumerator
  126                | enumerator_list ',' enumerator

  127 enumerator: IDENTIFIER
  128           | IDENTIFIER '=' constant_expression

  129 type_qualifier: CONST
  130               | VOLATILE

  131 declarator: pointer direct_declarator
  132           | direct_declarator

  133 direct_declarator: IDENTIFIER
  134                  | '(' declarator ')'
  135                  | direct_declarator '[' constant_expression ']'
  136                  | direct_declarator '[' ']'
  137                  | direct_declarator '(' parameter_type_list ')'
  138                  | direct_declarator '(' identifier_list ')'
  139                  | direct_declarator '(' ')'

  140 pointer: '*'
  141        | '*' type_qualifier_list
  142        | '*' pointer
  143        | '*' type_qualifier_list pointer

  144 type_qualifier_list: type_qualifier
  145                    | type_qualifier_list type_qualifier

  146 parameter_type_list: parameter_list

  147 parameter_list: parameter_declaration
  148               | parameter_list ',' parameter_declaration

  149 parameter_declaration: declaration_specifiers declarator
  150                      | declaration_specifiers abstract_declarator
  151                      | declaration_specifiers

  152 identifier_list: IDENTIFIER
  153                | identifier_list ',' IDENTIFIER

  154 type_name: specifier_qualifier_list
  155          | specifier_qualifier_list abstract_declarator

  156 abstract_declarator: pointer
  157                    | direct_abstract_declarator
  158                    | pointer direct_abstract_declarator

  159 direct_abstract_declarator: '(' abstract_declarator ')'
  160                           | '[' ']'
  161                           | '[' constant_expression ']'
  162                           | direct_abstract_declarator '[' ']'
  163                           | direct_abstract_declarator '[' constant_expression ']'
  164                           | '(' ')'
  165                           | '(' parameter_type_list ')'
  166                           | direct_abstract_declarator '(' ')'
  167                           | direct_abstract_declarator '(' parameter_type_list ')'

  168 initializer: assignment_expression
  169            | '{' initializer_list '}'
  170            | '{' initializer_list ',' '}'

  171 initializer_list: initializer
  172                 | initializer_list ',' initializer

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: IDENTIFIER ':' statement
  180                  | CASE constant_expression ':' statement
  181                  | DEFAULT ':' statement

  182 compound_statement: '{' '}'
  183                   | '{' block_item_list '}'

  184 block_item_list: block_item
  185                | block_item_list block_item

  186 block_item: declaration
  187           | statement

  188 expression_statement: ';'
  189                     | expression ';'

  190 selection_statement: IF '(' expression ')' statement
  191                    | IF '(' expression ')' statement ELSE statement
  192                    | SWITCH '(' expression ')' statement

  193 iteration_statement: WHILE '(' expression ')' statement
  194                    | DO statement WHILE '(' expression ')' ';'
  195                    | FOR '(' for_expr ';' for_expr ';' for_expr ')' statement

  196 for_expr: /* empty */
  197         | expression
  198         | declaration_no_semi

  199 declaration_list: declaration
  200                 | declaration_list declaration

  201 jump_statement: GOTO IDENTIFIER ';'
  202               | CONTINUE ';'
  203               | BREAK ';'
  204               | RETURN ';'
  205               | RETURN expression ';'

  206 translation_unit: external_declaration
  207                 | translation_unit external_declaration

  208 external_declaration: function_definition
  209                     | declaration

  210 function_definition: declaration_specifiers declarator declaration_list compound_statement
  211                    | declaration_specifiers declarator compound_statement
  212                    | declarator declaration_list compound_statement
  213                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 26
'%' (37) 32
'&' (38) 21 48
'(' (40) 4 7 8 20 28 134 137 138 139 159 164 165 166 167 190 191 192
    193 194 195
')' (41) 4 7 8 20 28 134 137 138 139 159 164 165 166 167 190 191 192
    193 194 195
'*' (42) 22 30 140 141 142 143
'+' (43) 23 34
',' (44) 14 73 85 118 126 148 153 170 172
'-' (45) 24 35
'.' (46) 9
'/' (47) 31
':' (58) 58 120 121 179 180 181
';' (59) 75 76 112 188 189 194 195 201 202 203 204 205
'<' (60) 40
'=' (61) 61 87 128
'>' (62) 41
'?' (63) 58
'[' (91) 6 135 136 160 161 162 163
']' (93) 6 135 136 160 161 162 163
'^' (94) 50
'{' (123) 105 106 122 123 169 170 182 183
'|' (124) 52
'}' (125) 105 106 122 123 169 170 182 183
'~' (126) 25
error (256)
AUTO (258) 91
BREAK (259) 203
CASE (260) 180
CHAR (261) 94
CONST (262) 129
CONTINUE (263) 202
DEFAULT (264) 181
DO (265) 194
DOUBLE (266) 99
ELSE (267) 191
ENUM (268) 122 123 124
EXTERN (269) 89
FLOAT (270) 98
FOR (271) 195
GOTO (272) 201
IF (273) 190 191
INT (274) 96
LONG (275) 97
REGISTER (276) 92
RETURN (277) 204 205
SHORT (278) 95
SIGNED (279) 100
SIZEOF (280) 19 20
STATIC (281) 90
STRUCT (282) 108
SWITCH (283) 192
TYPEDEF (284) 88
UNION (285) 109
UNSIGNED (286) 101
VOID (287) 93
VOLATILE (288) 130
WHILE (289) 193 194
IDENTIFIER (290) 1 9 10 105 107 123 124 127 128 133 152 153 179 201
CONSTANT (291) 2
STRING_LITERAL (292) 3
ELLIPSIS (293)
PTR_OP (294) 10
INC_OP (295) 11 16
DEC_OP (296) 12 17
LEFT_OP (297) 37
RIGHT_OP (298) 38
LE_OP (299) 42
GE_OP (300) 43
EQ_OP (301) 45
NE_OP (302) 46
AND_OP (303) 54
OR_OP (304) 56
MUL_ASSIGN (305) 62
DIV_ASSIGN (306) 63
MOD_ASSIGN (307) 64
ADD_ASSIGN (308) 65
SUB_ASSIGN (309) 66
LEFT_ASSIGN (310) 67
RIGHT_ASSIGN (311) 68
AND_ASSIGN (312) 69
XOR_ASSIGN (313) 70
OR_ASSIGN (314) 71
TYPE_NAME (315) 104
LOWER_THAN_ELSE (316)


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
primary_expression (87)
    on left: 1 2 3 4, on right: 5
postfix_expression (88)
    on left: 5 6 7 8 9 10 11 12, on right: 6 7 8 9 10 11 12 15
argument_expression_list (89)
    on left: 13 14, on right: 8 14
unary_expression (90)
    on left: 15 16 17 18 19 20, on right: 16 17 19 27 60
unary_operator (91)
    on left: 21 22 23 24 25 26, on right: 18
cast_expression (92)
    on left: 27 28, on right: 18 28 29 30 31 32
multiplicative_expression (93)
    on left: 29 30 31 32, on right: 30 31 32 33 34 35
additive_expression (94)
    on left: 33 34 35, on right: 34 35 36 37 38
shift_expression (95)
    on left: 36 37 38, on right: 37 38 39 40 41 42 43
relational_expression (96)
    on left: 39 40 41 42 43, on right: 40 41 42 43 44 45 46
equality_expression (97)
    on left: 44 45 46, on right: 45 46 47 48
and_expression (98)
    on left: 47 48, on right: 48 49 50
exclusive_or_expression (99)
    on left: 49 50, on right: 50 51 52
inclusive_or_expression (100)
    on left: 51 52, on right: 52 53 54
logical_and_expression (101)
    on left: 53 54, on right: 54 55 56
logical_or_expression (102)
    on left: 55 56, on right: 56 57 58
conditional_expression (103)
    on left: 57 58, on right: 58 59 74
assignment_expression (104)
    on left: 59 60, on right: 13 14 60 72 73 168
assignment_operator (105)
    on left: 61 62 63 64 65 66 67 68 69 70 71, on right: 60
expression (106)
    on left: 72 73, on right: 4 6 58 73 189 190 191 192 193 194 197
    205
constant_expression (107)
    on left: 74, on right: 120 121 128 135 161 163 180
declaration (108)
    on left: 75 76, on right: 186 199 200 209
declaration_no_semi (109)
    on left: 77, on right: 198
declaration_specifiers (110)
    on left: 78 79 80 81 82 83, on right: 75 76 77 79 81 83 149 150
    151 210 211
init_declarator_list (111)
    on left: 84 85, on right: 76 77 85
init_declarator (112)
    on left: 86 87, on right: 84 85
storage_class_specifier (113)
    on left: 88 89 90 91 92, on right: 78 79
type_specifier (114)
    on left: 93 94 95 96 97 98 99 100 101 102 103 104, on right: 80
    81 113 114
struct_or_union_specifier (115)
    on left: 105 106 107, on right: 102
struct_or_union (116)
    on left: 108 109, on right: 105 106 107
struct_declaration_list (117)
    on left: 110 111, on right: 105 106 111
struct_declaration (118)
    on left: 112, on right: 110 111
specifier_qualifier_list (119)
    on left: 113 114 115 116, on right: 112 113 115 154 155
struct_declarator_list (120)
    on left: 117 118, on right: 112 118
struct_declarator (121)
    on left: 119 120 121, on right: 117 118
enum_specifier (122)
    on left: 122 123 124, on right: 103
enumerator_list (123)
    on left: 125 126, on right: 122 123 126
enumerator (124)
    on left: 127 128, on right: 125 126
type_qualifier (125)
    on left: 129 130, on right: 82 83 115 116 144 145
declarator (126)
    on left: 131 132, on right: 86 87 119 121 134 149 210 211 212 213
direct_declarator (127)
    on left: 133 134 135 136 137 138 139, on right: 131 132 135 136
    137 138 139
pointer (128)
    on left: 140 141 142 143, on right: 131 142 143 156 158
type_qualifier_list (129)
    on left: 144 145, on right: 141 143 145
parameter_type_list (130)
    on left: 146, on right: 137 165 167
parameter_list (131)
    on left: 147 148, on right: 146 148
parameter_declaration (132)
    on left: 149 150 151, on right: 147 148
identifier_list (133)
    on left: 152 153, on right: 138 153
type_name (134)
    on left: 154 155, on right: 20 28
abstract_declarator (135)
    on left: 156 157 158, on right: 150 155 159
direct_abstract_declarator (136)
    on left: 159 160 161 162 163 164 165 166 167, on right: 157 158
    162 163 166 167
initializer (137)
    on left: 168 169 170, on right: 87 171 172
initializer_list (138)
    on left: 171 172, on right: 169 170 172
statement (139)
    on left: 173 174 175 176 177 178, on right: 179 180 181 187 190
    191 192 193 194 195
labeled_statement (140)
    on left: 179 180 181, on right: 173
compound_statement (141)
    on left: 182 183, on right: 174 210 211 212 213
block_item_list (142)
    on left: 184 185, on right: 183 185
block_item (143)
    on left: 186 187, on right: 184 185
expression_statement (144)
    on left: 188 189, on right: 175
selection_statement (145)
    on left: 190 191 192, on right: 176
iteration_statement (146)
    on left: 193 194 195, on right: 177
for_expr (147)
    on left: 196 197 198, on right: 195
declaration_list (148)
    on left: 199 200, on right: 200 210 212
jump_statement (149)
    on left: 201 202 203 204 205, on right: 178
translation_unit (150)
    on left: 206 207, on right: 0 207
external_declaration (151)
    on left: 208 209, on right: 206 207
function_definition (152)
    on left: 210 211 212 213, on right: 208


State 0

    0 $accept: . translation_unit $end

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    REGISTER    shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    STRUCT      shift, and go to state 14
    TYPEDEF     shift, and go to state 15
    UNION       shift, and go to state 16
    UNSIGNED    shift, and go to state 17
    VOID        shift, and go to state 18
    VOLATILE    shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    TYPE_NAME   shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37


State 1

   91 storage_class_specifier: AUTO .

    $default  reduce using rule 91 (storage_class_specifier)


State 2

   94 type_specifier: CHAR .

    $default  reduce using rule 94 (type_specifier)


State 3

  129 type_qualifier: CONST .

    $default  reduce using rule 129 (type_qualifier)


State 4

   99 type_specifier: DOUBLE .

    $default  reduce using rule 99 (type_specifier)


State 5

  122 enum_specifier: ENUM . '{' enumerator_list '}'
  123               | ENUM . IDENTIFIER '{' enumerator_list '}'
  124               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


State 6

   89 storage_class_specifier: EXTERN .

    $default  reduce using rule 89 (storage_class_specifier)


State 7

   98 type_specifier: FLOAT .

    $default  reduce using rule 98 (type_specifier)


State 8

   96 type_specifier: INT .

    $default  reduce using rule 96 (type_specifier)


State 9

   97 type_specifier: LONG .

    $default  reduce using rule 97 (type_specifier)


State 10

   92 storage_class_specifier: REGISTER .

    $default  reduce using rule 92 (storage_class_specifier)


State 11

   95 type_specifier: SHORT .

    $default  reduce using rule 95 (type_specifier)


State 12

  100 type_specifier: SIGNED .

    $default  reduce using rule 100 (type_specifier)


State 13

   90 storage_class_specifier: STATIC .

    $default  reduce using rule 90 (storage_class_specifier)


State 14

  108 struct_or_union: STRUCT .

    $default  reduce using rule 108 (struct_or_union)


State 15

   88 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 88 (storage_class_specifier)


State 16

  109 struct_or_union: UNION .

    $default  reduce using rule 109 (struct_or_union)


State 17

  101 type_specifier: UNSIGNED .

    $default  reduce using rule 101 (type_specifier)


State 18

   93 type_specifier: VOID .

    $default  reduce using rule 93 (type_specifier)


State 19

  130 type_qualifier: VOLATILE .

    $default  reduce using rule 130 (type_qualifier)


State 20

  133 direct_declarator: IDENTIFIER .

    $default  reduce using rule 133 (direct_declarator)


State 21

  104 type_specifier: TYPE_NAME .

    $default  reduce using rule 104 (type_specifier)


State 22

  134 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 20
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declarator         go to state 40
    direct_declarator  go to state 33
    pointer            go to state 34


State 23

  140 pointer: '*' .
  141        | '*' . type_qualifier_list
  142        | '*' . pointer
  143        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 19
    '*'       shift, and go to state 23

    $default  reduce using rule 140 (pointer)

    type_qualifier       go to state 41
    pointer              go to state 42
    type_qualifier_list  go to state 43


State 24

  209 external_declaration: declaration .

    $default  reduce using rule 209 (external_declaration)


State 25

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'
  210 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  211                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 20
    '('         shift, and go to state 22
    '*'         shift, and go to state 23
    ';'         shift, and go to state 44

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 33
    pointer               go to state 34


State 26

   78 declaration_specifiers: storage_class_specifier .
   79                       | storage_class_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    STRUCT     shift, and go to state 14
    TYPEDEF    shift, and go to state 15
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    TYPE_NAME  shift, and go to state 21

    $default  reduce using rule 78 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 27

   80 declaration_specifiers: type_specifier .
   81                       | type_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    STRUCT     shift, and go to state 14
    TYPEDEF    shift, and go to state 15
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    TYPE_NAME  shift, and go to state 21

    $default  reduce using rule 80 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 28

  102 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 102 (type_specifier)


State 29

  105 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  106                          | struct_or_union . '{' struct_declaration_list '}'
  107                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 50
    '{'         shift, and go to state 51


State 30

  103 type_specifier: enum_specifier .

    $default  reduce using rule 103 (type_specifier)


State 31

   82 declaration_specifiers: type_qualifier .
   83                       | type_qualifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    STRUCT     shift, and go to state 14
    TYPEDEF    shift, and go to state 15
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    TYPE_NAME  shift, and go to state 21

    $default  reduce using rule 82 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 32

  212 function_definition: declarator . declaration_list compound_statement
  213                    | declarator . compound_statement

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    STRUCT     shift, and go to state 14
    TYPEDEF    shift, and go to state 15
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    TYPE_NAME  shift, and go to state 21
    '{'        shift, and go to state 53

    declaration                go to state 54
    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    compound_statement         go to state 56
    declaration_list           go to state 57


State 33

  132 declarator: direct_declarator .
  135 direct_declarator: direct_declarator . '[' constant_expression ']'
  136                  | direct_declarator . '[' ']'
  137                  | direct_declarator . '(' parameter_type_list ')'
  138                  | direct_declarator . '(' identifier_list ')'
  139                  | direct_declarator . '(' ')'

    '('  shift, and go to state 58
    '['  shift, and go to state 59

    $default  reduce using rule 132 (declarator)


State 34

  131 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 20
    '('         shift, and go to state 22

    direct_declarator  go to state 60


State 35

    0 $accept: translation_unit . $end
  207 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 61
    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INT         shift, and go to state 8
    LONG        shift, and go to state 9
    REGISTER    shift, and go to state 10
    SHORT       shift, and go to state 11
    SIGNED      shift, and go to state 12
    STATIC      shift, and go to state 13
    STRUCT      shift, and go to state 14
    TYPEDEF     shift, and go to state 15
    UNION       shift, and go to state 16
    UNSIGNED    shift, and go to state 17
    VOID        shift, and go to state 18
    VOLATILE    shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    TYPE_NAME   shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    external_declaration       go to state 62
    function_definition        go to state 37


State 36

  206 translation_unit: external_declaration .

    $default  reduce using rule 206 (translation_unit)


State 37

  208 external_declaration: function_definition .

    $default  reduce using rule 208 (external_declaration)


State 38

  123 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
  124               | ENUM IDENTIFIER .

    '{'  shift, and go to state 63

    $default  reduce using rule 124 (enum_specifier)


State 39

  122 enum_specifier: ENUM '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 64

    enumerator_list  go to state 65
    enumerator       go to state 66


State 40

  134 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 67


State 41

  144 type_qualifier_list: type_qualifier .

    $default  reduce using rule 144 (type_qualifier_list)


State 42

  142 pointer: '*' pointer .

    $default  reduce using rule 142 (pointer)


State 43

  141 pointer: '*' type_qualifier_list .
  143        | '*' type_qualifier_list . pointer
  145 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 3
    VOLATILE  shift, and go to state 19
    '*'       shift, and go to state 23

    $default  reduce using rule 141 (pointer)

    type_qualifier  go to state 68
    pointer         go to state 69


State 44

   75 declaration: declaration_specifiers ';' .

    $default  reduce using rule 75 (declaration)


State 45

   76 declaration: declaration_specifiers init_declarator_list . ';'
   85 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 70
    ';'  shift, and go to state 71


State 46

   84 init_declarator_list: init_declarator .

    $default  reduce using rule 84 (init_declarator_list)


State 47

   86 init_declarator: declarator .
   87                | declarator . '=' initializer
  210 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  211                    | declaration_specifiers declarator . compound_statement

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    STRUCT     shift, and go to state 14
    TYPEDEF    shift, and go to state 15
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    TYPE_NAME  shift, and go to state 21
    '='        shift, and go to state 72
    '{'        shift, and go to state 53

    $default  reduce using rule 86 (init_declarator)

    declaration                go to state 54
    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    compound_statement         go to state 73
    declaration_list           go to state 74


State 48

   79 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 79 (declaration_specifiers)


State 49

   81 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 81 (declaration_specifiers)


State 50

  105 struct_or_union_specifier: struct_or_union IDENTIFIER . '{' struct_declaration_list '}'
  107                          | struct_or_union IDENTIFIER .

    '{'  shift, and go to state 75

    $default  reduce using rule 107 (struct_or_union_specifier)


State 51

  106 struct_or_union_specifier: struct_or_union '{' . struct_declaration_list '}'

    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    FLOAT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STRUCT     shift, and go to state 14
    UNION      shift, and go to state 16
    UNSIGNED   shift, and go to state 17
    VOID       shift, and go to state 18
    VOLATILE   shift, and go to state 19
    TYPE_NAME  shift, and go to state 21

    type_specifier             go to state 76
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    struct_declaration_list    go to state 77
    struct_declaration         go to state 78
    specifier_qualifier_list   go to state 79
    enum_specifier             go to state 30
    type_qualifier             go to state 80


State 52

   83 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 83 (declaration_specifiers)


State 53

  182 compound_statement: '{' . '}'
  183                   | '{' . block_item_list '}'
